--- a/conf/lockdown-default.conf
+++ b/conf/lockdown-default.conf
@@ -18,6 +18,7 @@ block_bogons=0
 # Countries blocks to whitelist
 countries_good=(
   us
+  nl
 )
 
 # Countries blocks to whitelist
@@ -38,10 +39,10 @@ location_lists=/etc/lockdown/lists
 location_logs=/var/log/lockdown
 
 # Recipient of notifications or '' for none
-MAILTO='idometeor@gmail.com'
+MAILTO='chris@combat.nl'
 
 # Allow Lockdown to ping the installation stats counter
-PING=1
+PING=0
 
 # Globally open ports
 # Any traffic not matching a blacklist entry will be
@@ -50,9 +51,6 @@ ports=(
   22
   80
   443
-  2083
-  2087
-  31303
 )
 
 # Repository for Lockdown lists
